quick fix z-index of sections

--- a/style.css
+++ b/style.css
@@ -134,11 +134,13 @@ a:hover {
 	"main main"
 	"footer footer";
 	/*background: linear-gradient(175deg, rgba(0, 0, 0, 0), rgba(0, 15, 25, 0.05), rgba(1, 10, 45, 0.10), rgba(12, 22, 64, 0.25), rgba(32, 53, 133, 0.5), rgba(130, 169, 181, 0.9), #D0E0FA);*/
-
 }
 
 /* Resize and organize as grid page part */
-header, footer, .page > main {display: grid}
+header, footer, .page > main {
+	display: grid;
+	z-index: 10;
+}
 
 .side-margin-15 {padding: 0 15% 0 15%}
 .anchor-position {padding-top: 6rem}
